[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Art/Projectiles/energyBallImpact.png" type="Texture" id=1]
[ext_resource path="res://Scripts/projectile1_explosion.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 896, 128, 128 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[node name="projectile1_explosion" type="Node2D"]
script = ExtResource( 2 )

[node name="projectile1_explosion_sprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.00791, -0.500565 )
rotation = 3.14159
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 9 )

[node name="despawn_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
